--- a/deno.json
+++ b/deno.json
@@ -1,13 +1,15 @@
 {
   "tasks": {
-    "dev": "deno run --watch --allow-net  ./src/main.ts",
-    "start": "deno run --allow-net --allow-read ./src/main.ts"
+    "dev": "deno run --watch -A ./src/main.ts",
+    "start": "deno run --allow-net --allow-read --allow-env ./src/main.ts"
   },
   "imports": {
     "@db/sqlite": "jsr:@db/sqlite@^0.12.0",
     "@deno/deployctl": "jsr:@deno/deployctl@^1.13.1",
     "@hono/hono": "jsr:@hono/hono@^4.7.7",
     "@std/assert": "jsr:@std/assert@1",
-    "@routes": "./src/routes/index.ts"
+    "@std/dotenv": "jsr:@std/dotenv@^0.225.3",
+    "@routes": "./src/routes/index.ts",
+    "@types": "./src/types/index.ts"
   }
 }
